; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/synopsys/extr_dw-hdmi.c_dw_hdmi_set_high_tmds_clock_ratio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/synopsys/extr_dw-hdmi.c_dw_hdmi_set_high_tmds_clock_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_hdmi = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@HDMI14_MAX_TMDSCLK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dw_hdmi_set_high_tmds_clock_ratio(%struct.dw_hdmi* %0) #0 {
  %2 = alloca %struct.dw_hdmi*, align 8
  %3 = alloca i64, align 8
  store %struct.dw_hdmi* %0, %struct.dw_hdmi** %2, align 8
  %4 = load %struct.dw_hdmi*, %struct.dw_hdmi** %2, align 8
  %5 = getelementptr inbounds %struct.dw_hdmi, %struct.dw_hdmi* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %3, align 8
  %9 = load %struct.dw_hdmi*, %struct.dw_hdmi** %2, align 8
  %10 = call i64 @dw_hdmi_support_scdc(%struct.dw_hdmi* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %27

12:                                               ; preds = %1
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @HDMI14_MAX_TMDSCLK, align 8
  %15 = icmp ugt i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %12
  %17 = load %struct.dw_hdmi*, %struct.dw_hdmi** %2, align 8
  %18 = getelementptr inbounds %struct.dw_hdmi, %struct.dw_hdmi* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @drm_scdc_set_high_tmds_clock_ratio(i32 %19, i32 1)
  br label %26

21:                                               ; preds = %12
  %22 = load %struct.dw_hdmi*, %struct.dw_hdmi** %2, align 8
  %23 = getelementptr inbounds %struct.dw_hdmi, %struct.dw_hdmi* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @drm_scdc_set_high_tmds_clock_ratio(i32 %24, i32 0)
  br label %26

26:                                               ; preds = %21, %16
  br label %27

27:                                               ; preds = %26, %1
  ret void
}

declare dso_local i64 @dw_hdmi_support_scdc(%struct.dw_hdmi*) #1

declare dso_local i32 @drm_scdc_set_high_tmds_clock_ratio(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
